# actions-digest

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
docs/how-to/: Dependabot.md  Docker.md
src/: main.rs
src/lockfile/: init.rs
src/resolve/: github.rs
src/step/: action.rs  mod.rs
tests/feasibility-study/: README.md  after.yaml  before.yaml  gha-digest  justfile
tests/integration/: resolve.rs
tests/integration/data/: after.yaml  before.yaml
