[package]
name = "actions-digest"
description = "Resolve GitHub Action steps from git-ref to commit-sha"
authors = ["Hendrik Maus <aidentailor@gmail.com>"]
version = "0.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "1"
rayon = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["derive", "color", "suggestions", "env", "wrap_help"] }
thiserror = "1"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
pretty_assertions = "0.7"
rstest = "0.12"
